# email-newsletter

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: general.yml
migrations/: 20250905004459_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
