[package]
name = "emailnewsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "emailnewsletter"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Used for tests, etc, not included in final application binary
[dev-dependencies]
reqwest = "0.12"
